--- a/public/payer-solde.html
+++ b/public/payer-solde.html
@@ -43,7 +43,7 @@
       .form-section {
         background: rgba(255, 255, 255, 0.1);
         border-radius: 20px;
-        padding: 20px;
+        padding: 15px;
         box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
         backdrop-filter: blur(20px);
         border: 1px solid rgba(255, 255, 255, 0.3);
@@ -56,23 +56,34 @@
       .detail-item {
         display: flex;
         justify-content: space-between;
-        padding: 10px 0;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.25);
-        font-size: 0.95rem;
+        margin-bottom: 15px;
+        padding: 12px 0;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+        font-size: 0.9rem;
+        color: white;
       }
       .detail-item:last-child {
         border-bottom: none;
-        margin-top: 10px;
-        padding-top: 10px;
+        margin-top: 20px;
+        padding-top: 20px;
+        border-top: 2px solid rgba(255, 255, 255, 0.4);
       }
       .payment-card {
         background: rgba(255, 255, 255, 0.08);
         border: 1px solid rgba(255, 255, 255, 0.25);
         border-radius: 12px;
-        padding: 16px;
-        margin-top: 16px;
+        padding: 12px;
+        margin-top: 12px;
         color: white;
         position: relative;
+      }
+
+      .payment-card h3 {
+        color: white;
+        font-size: 1.5rem;
+        font-weight: bold;
+        margin-bottom: 12px;
+        text-align: center;
       }
       .payment-lock {
         position: absolute;
@@ -95,19 +106,24 @@
       .payment-row {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         padding: 8px 0;
+        color: white;
+        font-size: 1rem;
+        line-height: 1.3;
       }
       .payment-row.deposit {
         color: #3b82f6;
         font-weight: 600;
+        font-size: 1.1rem;
       }
       .progress-bar {
         width: 100%;
         height: 8px;
-        background: rgba(255, 255, 255, 0.25);
+        background: rgba(255, 255, 255, 0.2);
         border-radius: 4px;
+        margin: 12px 0;
         overflow: hidden;
-        margin: 8px 0 12px;
       }
       .progress-fill {
         height: 100%;
@@ -118,30 +134,45 @@
       .btn-submit {
         background: linear-gradient(135deg, #3b82f6, #2563eb);
         color: white;
-        padding: 14px 24px;
+        padding: 16px 30px;
         border: none;
         border-radius: 12px;
+        font-size: 18px;
         font-weight: 600;
+        cursor: pointer;
         width: 100%;
+        transition: all 0.3s ease;
+        box-shadow: 0 6px 20px rgba(59, 130, 246, 0.3);
+        text-transform: uppercase;
+        letter-spacing: 0.5px;
         display: flex;
         align-items: center;
         justify-content: center;
-        min-height: 50px;
-        box-shadow: 0 6px 20px rgba(59, 130, 246, 0.3);
+        min-height: 55px;
+      }
+      .btn-submit:hover {
+        background: linear-gradient(135deg, #2563eb, #1d4ed8);
+        transform: translateY(-3px);
+        box-shadow: 0 8px 25px rgba(59, 130, 246, 0.4);
       }
       .btn-submit:disabled {
         background: #9ca3af;
+        cursor: not-allowed;
+        transform: none;
+        box-shadow: none;
       }
       #card-errors {
         color: #ef4444;
-        margin-top: 10px;
-        font-size: 0.9rem;
+        margin-top: 12px;
+        font-size: 14px;
+        font-weight: 500;
       }
       .payment-disclaimer {
         text-align: center;
-        color: rgba(255, 255, 255, 0.9);
-        font-size: 0.85rem;
-        margin-top: 10px;
+        color: rgba(255, 255, 255, 0.8);
+        font-size: 0.8rem;
+        margin-top: 12px;
+        line-height: 1.4;
       }
 
       /* Styles pour le sélecteur de langue */
@@ -250,9 +281,7 @@
               <div class="payment-lock" id="balance-lock">
                 <div class="lock-box" id="balance-lock-text"></div>
               </div>
-              <h4 style="margin: 0 0 10px 0" id="payment-summary-title">
-                Récapitulatif du paiement
-              </h4>
+              <h3 id="payment-summary-title">Récapitulatif du paiement</h3>
               <div class="payment-row">
                 <span id="payment-total-label">Total</span
                 ><span id="total-amount">—</span>
