Opti espace recap payersolde

--- a/public/payer-solde.html
+++ b/public/payer-solde.html
@@ -43,30 +43,30 @@
       .form-section {
         background: rgba(255, 255, 255, 0.1);
         border-radius: 20px;
-        padding: 15px;
+        padding: 12px;
         box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
         backdrop-filter: blur(20px);
         border: 1px solid rgba(255, 255, 255, 0.3);
       }
       .reservation-details {
-        padding: 1px;
+        padding: 8px 10px;
         margin-top: 1px;
         color: white;
       }
       .detail-item {
         display: flex;
         justify-content: space-between;
-        margin-bottom: 15px;
-        padding: 12px 0;
+        margin-bottom: 8px;
+        padding: 6px 0;
         border-bottom: 1px solid rgba(255, 255, 255, 0.3);
         font-size: 0.9rem;
         color: white;
       }
       .detail-item:last-child {
         border-bottom: none;
-        margin-top: 20px;
-        padding-top: 20px;
-        border-top: 2px solid rgba(255, 255, 255, 0.4);
+        margin-top: 10px;
+        padding-top: 10px;
+        border-top: 1px solid rgba(255, 255, 255, 0.4);
       }
       .payment-card {
         background: rgba(255, 255, 255, 0.08);
