--- a/public/payer-solde.html
+++ b/public/payer-solde.html
@@ -201,6 +201,162 @@
         outline: none;
         background: rgba(59, 130, 246, 0.1);
       }
+
+      /* Responsive design pour mobile */
+      @media (max-width: 768px) {
+        /* Conteneurs principaux */
+        .content,
+        .inner {
+          padding: 0 10px;
+          max-width: 100vw;
+          width: 100%;
+        }
+
+        .form-section {
+          padding: 15px;
+          margin: 10px 0;
+          max-width: 100%;
+          width: 100%;
+        }
+
+        .detail-item {
+          font-size: 0.85rem;
+          padding: 10px 0;
+          max-width: 100%;
+          width: 100%;
+        }
+
+        .reservation-details {
+          padding: 15px;
+          max-width: 100%;
+          width: 100%;
+        }
+
+        /* Forcer les largeurs maximales */
+        .span-4-5,
+        .span-9-5,
+        .span-3-75,
+        .span-1-75 {
+          max-width: 100%;
+          width: 100%;
+        }
+
+        /* Responsive pour l'encart de paiement */
+        .payment-card {
+          padding: 12px 15px;
+          margin: 0 10px;
+          max-width: 100%;
+          width: calc(100% - 20px);
+        }
+
+        .payment-card h3 {
+          font-size: 1.3rem;
+          margin-bottom: 10px;
+        }
+
+        .payment-row {
+          font-size: 0.9rem;
+          padding: 4px 0;
+        }
+
+        .payment-row.deposit {
+          font-size: 1rem;
+        }
+
+        .progress-bar {
+          margin: 8px 0;
+        }
+
+        .btn-submit {
+          padding: 15px 20px;
+          font-size: 16px;
+          min-height: 50px;
+          max-width: 100%;
+          width: 100%;
+        }
+
+        .payment-disclaimer {
+          font-size: 0.75rem;
+          margin-top: 8px;
+        }
+      }
+
+      @media (max-width: 480px) {
+        /* Conteneurs principaux */
+        .content,
+        .inner {
+          padding: 0 5px;
+          max-width: 100vw;
+          width: 100%;
+        }
+
+        .form-section {
+          padding: 10px;
+          max-width: 100%;
+          width: 100%;
+        }
+
+        .detail-item {
+          font-size: 0.8rem;
+          max-width: 100%;
+          width: 100%;
+        }
+
+        /* Forcer tous les éléments à respecter la largeur */
+        * {
+          max-width: 100vw;
+        }
+
+        .panel,
+        .content,
+        .inner,
+        .form-section,
+        .payment-card,
+        .btn-submit,
+        .detail-item {
+          max-width: 100%;
+          width: 100%;
+          overflow-x: hidden;
+        }
+
+        /* Responsive pour l'encart de paiement sur très petits écrans */
+        .payment-card {
+          padding: 10px;
+          margin: 0 5px;
+          width: calc(100% - 10px);
+        }
+
+        .payment-card h3 {
+          font-size: 1.2rem;
+          margin-bottom: 10px;
+        }
+
+        .payment-row {
+          font-size: 0.85rem;
+          padding: 4px 0;
+        }
+
+        .payment-row.deposit {
+          font-size: 0.95rem;
+        }
+
+        .progress-bar {
+          margin: 6px 0;
+          height: 6px;
+        }
+
+        .btn-submit {
+          font-size: 14px;
+          padding: 12px 15px;
+          max-width: 100%;
+          width: 100%;
+        }
+
+        .payment-disclaimer {
+          font-size: 0.7rem;
+          margin-top: 6px;
+        }
+      }
     </style>
   </head>
   <body class="is-preload">
